Enhanced frontend styling, updated JS features

--- a/public/about.html
+++ b/public/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>About BookExplorer</h1>
+    <h1>About</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About</a>
@@ -18,19 +18,19 @@
   <main>
     <section id="about">
       <h2>What is BookExplorer?</h2>
-      <p>BookExplorer is an interactive platform for book lovers to discover new books, explore detailed information about them, and manage their personal reading lists.</p>
+      <p><b>BookExplorer</b> is an interactive platform for book lovers to discover new books, explore detailed information about them, and manage their personal reading lists.</p>
     </section>
     <section id="features">
       <h2>Features</h2>
       <ul>
-        <li>Search and discover books using the Open Library API.</li>
-        <li>Create and manage your own personalized reading list.</li>
-        <li>Explore author information and genre details.</li>
+        <li>Search and discover books using the <b>Open Library API</b></li>
+        <li>Create and manage your own personalized reading list</li>
+        <li>Explore author information and genre details</li>
       </ul>
     </section>
     <section id="team">
       <h2>Our Team</h2>
-      <p>This project was built by a passionate team of students in the INST 377 class, combining design, technology, and management skills.</p>
+      <p>This project was built by a passionate team of INST377 students, combining design, technology, and management skills.</p>
     </section>
   </main>
   <footer>
