--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,15 @@
   </header>
   <main>
     <section id="search">
-      <h2>Search for Books</h2>
+      <h2>Dive into the world of books...</h2>
       <form id="book-search-form">
-        <input type="text" id="search-query" placeholder="Search for a book..." required>
-        <button type="submit">Search</button>
+        <input type="text" id="search-query" placeholder="Search BookExplorer" required class="search-input">
+
+        <button type="submit" class="search-button">Search</button>
+
       </form>
     </section>
     <section id="results">
-      <h2>Results</h2>
       <div id="book-results"></div>
     </section>
     <!-- NEW SLIDER SECTION -->
