--- a/public/reading-list.html
+++ b/public/reading-list.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Your Reading List</h1>
+    <h1>Reading List</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -20,6 +20,8 @@
   <main>
     <section id="reading-list-section">
       <h2>Your Saved Books</h2>
+      <ul id="reading-list"></ul>
+
       <ul id="reading-list">
         <!-- Books will be dynamically populated here -->
       </ul>
