Added page URLs to the README.md

--- a/public/reading-list.html
+++ b/public/reading-list.html
@@ -28,7 +28,7 @@
     </section>
     <!--CHART -->
     <section id="chart-section">
-      <h2>Reading List Overview</h2>
+      <h2>Overview</h2>
       <canvas id="reading-list-chart"></canvas>
     </section>
   </main>
